--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,27 +1,36 @@
 <% title(@project.name, "Projects") %>
 
 <div class="page-header">
-	<h1><%= @project.name %></h1>
+  <h1><%= @project.name %></h1>
 
-	<ul class="actions">
-		<li><%= link_to 'Edit Project', edit_project_path(@project), class: 'edit' %></li>
+  <ul class="actions">
+    <li><%= link_to 'Edit Project', edit_project_path(@project), class: 'edit' %></li>
 
-		<li><%= link_to 'Delete Project', project_path(@project),
-			method: :delete,
-			data: { confirm:
-						"Are you sure you want to delete this project?"
-						},
-			class: 'delete' %></li>
-	</ul>
+    <li><%= link_to 'Delete Project', project_path(@project),
+      method: :delete,
+      data: { confirm:
+            "Are you sure you want to delete this project?"
+            },
+      class: 'delete' %></li>
+  </ul>
 </div>
 
 <div class="page-header">
-	<h2>Tickets</h2>
+  <h2>Tickets</h2>
 
-	<ul class="actions">
-		<li><%= link_to 'New Ticket', new_project_ticket_path(@project), class: 'new' %></li>
-	</ul>
+  <ul class="actions">
+    <li><%= link_to 'New Ticket', new_project_ticket_path(@project), class: 'new' %></li>
+  </ul>
 </div>
 
 
 <p><%= @project.description %></p>
+
+<ul id='tickets'>
+  <% @project.tickets.each do |ticket| %>
+    <li>
+      #<%= ticket.id %> -
+      <%= link_to ticket.title, [@project, ticket] %>
+    </li>
+  <% end %>
+</ul>
