--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -15,5 +15,9 @@
 			class: "delete" %></li>
 	</div>
 
+	<p id="author">
+		Created by <%= @ticket.author.email %>, <%= time_ago_in_words(@ticket.created_at) %>
+	</p>
+
 	<%= simple_format(@ticket.description) %>
 </div>
