--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
 @import "projects";
 @import "tickets";
 @import "admin/application";
-@import "responsive";
+// @import "responsive";
 
 body {
 	padding-top: 70px;
