--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>
 		<% if content_for?(:title) %>
 			<%= yield(:title) %>
@@ -18,30 +19,39 @@
 		<div class="container">
 			<div class="navbar-header">
 				<%= link_to "Ticketee", root_path, class: "navbar-brand" %>
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+					<span class="sr-only">Toggle navigation></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 			</div>
-			<ul class="nav navbar-nav">
-				<li class="<%= "active" if current_page?("/") %>">
-					<%= link_to "Home", root_path %>
-				</li>
-				<% unless user_signed_in? %>
-					<li class='<%= 'active' if current_page?('/users/sign_up') %>'>
-						<%= link_to "Sign up", new_user_registration_path %>
+
+			<div class="collapse navbar-collapse" id="collapse">
+				<ul class="nav navbar-nav">
+					<li class="<%= "active" if current_page?("/") %>">
+						<%= link_to "Home", root_path %>
 					</li>
-					<li class='<%= 'active' if current_page?('/users/sign_in') %>'>
-						<%= link_to "Sign in", new_user_session_path %>
-					</li>
-				<% end %>
-			</ul>
-			<% if user_signed_in? %>
-				<ul class='nav navbar-nav navbar-right'>
-					<li class='navbar-text'>
-						Signed in as <%= current_user.email %>
-					</li>
-					<li>
-						<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-					</li>
+					<% unless user_signed_in? %>
+						<li class='<%= 'active' if current_page?('/users/sign_up') %>'>
+							<%= link_to "Sign up", new_user_registration_path %>
+						</li>
+						<li class='<%= 'active' if current_page?('/users/sign_in') %>'>
+							<%= link_to "Sign in", new_user_session_path %>
+						</li>
+					<% end %>
 				</ul>
-			<% end %>
+				<% if user_signed_in? %>
+					<ul class='nav navbar-nav navbar-right'>
+						<li class='navbar-text'>
+							Signed in as <%= current_user.email %>
+						</li>
+						<li>
+							<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+						</li>
+					</ul>
+				<% end %>
+			</div>
 		</div>
 	</nav>
 	<div class='container'>
