--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,11 @@
 <div class="page-header">
 	<h1>Projects</h1>
 
-	<ul class="actions">
-		<li><%= link_to fa_icon("plus") + ' New Project', new_admin_project_path, class: 'new btn btn-success' %></li>
-	</ul>
+  <% admins_only do %>
+  	<ul class="actions">
+  		<li><%= link_to fa_icon("plus") + ' New Project', new_admin_project_path, class: 'new btn btn-success' %></li>
+  	</ul>
+  <% end %>
 </div>
 
 <div id='projects'>
